Atualização final sobre backgrounds

--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,21 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
             background-position: center center;
             background-size: cover;
-            
+            background-attachment: fixed; */
+
+            /* Shorthand - background
+                color > imagem > position > repeat > [size] > attachment
+            */
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
 
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -32,6 +38,8 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium optio, architecto odio commodi nisi aliquam maxime omnis recusandae illum, voluptas dignissimos cumque nesciunt vitae mollitia dolor a porro hic error.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, animi. Adipisci consequatur sunt maiores ullam debitis dolorum harum beatae mollitia labore iure repellat velit quidem, commodi aut dolor voluptates rem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero culpa nesciunt quis nisi sint dolores consequatur corrupti provident sunt tempora unde voluptates dolorem hic delectus earum architecto mollitia eveniet!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium optio, architecto odio commodi nisi aliquam maxime omnis recusandae illum, voluptas dignissimos cumque nesciunt vitae mollitia dolor a porro hic error.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, animi. Adipisci consequatur sunt maiores ullam debitis dolorum harum beatae mollitia labore iure repellat velit quidem, commodi aut dolor voluptates rem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero culpa nesciunt quis nisi sint dolores consequatur corrupti provident sunt tempora unde voluptates dolorem hic delectus earum architecto mollitia eveniet!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium optio, architecto odio commodi nisi aliquam maxime omnis recusandae illum, voluptas dignissimos cumque nesciunt vitae mollitia dolor a porro hic error.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, animi. Adipisci consequatur sunt maiores ullam debitis dolorum harum beatae mollitia labore iure repellat velit quidem, commodi aut dolor voluptates rem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero culpa nesciunt quis nisi sint dolores consequatur corrupti provident sunt tempora unde voluptates dolorem hic delectus earum architecto mollitia eveniet!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium optio, architecto odio commodi nisi aliquam maxime omnis recusandae illum, voluptas dignissimos cumque nesciunt vitae mollitia dolor a porro hic error.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, animi. Adipisci consequatur sunt maiores ullam debitis dolorum harum beatae mollitia labore iure repellat velit quidem, commodi aut dolor voluptates rem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero culpa nesciunt quis nisi sint dolores consequatur corrupti provident sunt tempora unde voluptates dolorem hic delectus earum architecto mollitia eveniet!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium optio, architecto odio commodi nisi aliquam maxime omnis recusandae illum, voluptas dignissimos cumque nesciunt vitae mollitia dolor a porro hic error.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, animi. Adipisci consequatur sunt maiores ullam debitis dolorum harum beatae mollitia labore iure repellat velit quidem, commodi aut dolor voluptates rem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero culpa nesciunt quis nisi sint dolores consequatur corrupti provident sunt tempora unde voluptates dolorem hic delectus earum architecto mollitia eveniet!</p>
